Fix text readability with high contrast backgrounds

--- a/css/questionset.css
+++ b/css/questionset.css
@@ -125,6 +125,8 @@
 
 .questionset-results {
   text-align: center;
+  background: rgba(255, 255, 255, 0.9);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#E6FFFFFF,endColorstr=#E6FFFFFF);
 }
 
 .questionset-results .greeting {
